# docs/swagger.json
@@ -295,7 +295,7 @@
                     {
                         "type": "string",
                         "description": "Record Id",
-                        "name": "RecordId",
+                        "name": "recordId",
                         "in": "path",
                         "required": true
                     }
@@ -308,9 +308,6 @@
             },
             "delete": {
                 "description": "delete a record for the airtable\nPlease refer to https://airtable.com/developers/web/api/create-records for more parameter options.",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -320,7 +317,7 @@
                 "summary": "delete a record for a project",
                 "parameters": [
                     {
-                        "description": "Enter project risk properties",
+                        "description": "Enter create, update and delete records",
                         "name": "project",
                         "in": "body",
                         "schema": {
@@ -344,7 +341,7 @@
                     {
                         "type": "string",
                         "description": "Record Id",
-                        "name": "RecordId",
+                        "name": "recordId",
                         "in": "path",
                         "required": true
                     }
@@ -415,7 +412,7 @@
                             "mentioned": {
                                 "type": "object",
                                 "properties": {
-                                    "usrL2PNC5o3H4lBEi": {
+                                    "userId": {
                                         "type": "object",
                                         "properties": {
                                             "displayName": {
@@ -443,6 +440,23 @@
                 "offset": {}
             }
         },
+        "models.Field": {
+            "type": "object",
+            "properties": {
+                "End date": {
+                    "type": "string"
+                },
+                "Field 3": {
+                    "type": "string"
+                },
+                "Field 4": {
+                    "type": "string"
+                },
+                "Projects": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Record": {
             "type": "object",
             "properties": {
@@ -450,21 +464,7 @@
                     "type": "string"
                 },
                 "fields": {
-                    "type": "object",
-                    "properties": {
-                        "End date": {
-                            "type": "string"
-                        },
-                        "Field 3": {
-                            "type": "string"
-                        },
-                        "Field 4": {
-                            "type": "string"
-                        },
-                        "Projects": {
-                            "type": "string"
-                        }
-                    }
+                    "$ref": "#/definitions/models.Field"
                 },
                 "id": {
                     "type": "string"
