# pkg/app/routes.go
@@ -11,8 +11,8 @@ func (a *App) initializeRoutes() {
 	a.Router.HandleFunc("/api/v0/{baseId}/{tableId}", a.listRecords).Methods("GET", "OPTIONS")
 	a.Router.HandleFunc("/api/v0/{baseId}/{tableId}", a.createRecords).Methods("POST", "OPTIONS")
 	a.Router.HandleFunc("/api/v0/{baseId}/{tableId}/{recordId}", a.getRecords).Methods("GET", "OPTIONS")
-	// a.Router.HandleFunc("/api/v0/{baseId}/{tableId}/{recordId}", a.updateRecords).Methods("UPDATE", "OPTIONS")
-	// a.Router.HandleFunc("/api/v0/{baseId}/{tableId}/{recordId}", a.deleteRecords).Methods("DELETE", "OPTIONS")
+	a.Router.HandleFunc("/api/v0/{baseId}/{tableId}/{recordId}", a.updateRecords).Methods("PUT", "OPTIONS")
+	a.Router.HandleFunc("/api/v0/{baseId}/{tableId}/{recordId}", a.deleteRecords).Methods("DELETE", "OPTIONS")
 
 	// Comments routes
 	a.Router.HandleFunc("/api/v0/{baseId}/{tableId}/{recordId}/comments", a.listComments).Methods("GET", "OPTIONS")
